--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/forms": "~9.1.12",
+    "@angular/localize": "~9.1.12",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@clr/angular": "^3.1.14",
+    "@clr/icons": "^3.0.0",
+    "@clr/ui": "^3.0.0",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-treeview": "^4.3.2",
+    "@progress/kendo-theme-default": "latest",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
