--- a/.github/workflows/compare.yml
+++ b/.github/workflows/compare.yml
@@ -21,3 +21,8 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist/h5-tree-compare
+    - name: Archive data
+      uses: actions/upload-artifact@v2
+      with:
+        name: data
+        path: src/assets/data.json
