--- a/.github/workflows/compare.yml
+++ b/.github/workflows/compare.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: npm install
-    - run: npm test -- --watch false > output.txt
+    - run: npm test > output.txt
     - run: npm run build
     - run: cp dist/h5-tree-compare/index.html dist/h5-tree-compare/404.html
     - run: node parse-output
